unpackaged/main/default/objects/FundingAward/fields/Award_Summary__c.field-meta.xml
<CustomField>
    <fullName>Award_Summary__c</fullName>
    <label>Award Summary</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>