unpackaged/main/default/objects/FundingAward/fields/Intended_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Intended_Outcomes__c</fullName>
    <label>Intended Outcomes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>