unpackaged/main/default/objects/FundingAward/fields/Summary_Vs_Intended_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Summary_Vs_Intended_Outcomes__c</fullName>
    <label>Summary Vs Intended Outcomes Comparison</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>